--- a/LaskarSampahIRT/Pages/Home/HomeStoryboard.storyboard
+++ b/LaskarSampahIRT/Pages/Home/HomeStoryboard.storyboard
@@ -18,38 +18,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Berita dan Tips" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQ8-pF-oiL">
-                                <rect key="frame" x="8" y="96" width="136.33333333333334" height="22.333333333333329"/>
-                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="17"/>
+                                <rect key="frame" x="8" y="96" width="144.33333333333334" height="23.666666666666671"/>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="18"/>
                                 <color key="textColor" red="0.82352941180000006" green="0.81176470590000005" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2AL-8m-xvy">
-                                <rect key="frame" x="0.0" y="126.33333333333333" width="375" height="128.33333333333337"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="123.66666666666667" width="375" height="128.33333333333331"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="65j-PG-9ZN">
-                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="itemSize" width="200" height="120"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NewsAndTips" id="9Rm-qR-CpP" customClass="NewsAndTipsCollectionViewCell" customModule="LaskarSampahIRT" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="14.333333333333334" width="100" height="100"/>
+                                        <rect key="frame" x="0.0" y="4" width="200" height="120"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RKa-M5-a6n">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RKa-M5-a6n" customClass="DesignableView" customModule="LaskarSampahIRT" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="120"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TkN-E4-B7U">
-                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="70"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TkN-E4-B7U">
+                                                            <rect key="frame" x="0.0" y="0.0" width="200" height="84"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGb-jy-izC">
-                                                            <rect key="frame" x="0.0" y="70" width="100" height="30"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                                            <nil key="textColor"/>
+                                                            <rect key="frame" x="0.0" y="84" width="200" height="36"/>
+                                                            <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="12"/>
+                                                            <color key="textColor" red="0.18823529410000001" green="0.5450980392" blue="0.44705882349999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -64,6 +64,20 @@
                                                         <constraint firstAttribute="trailing" secondItem="zGb-jy-izC" secondAttribute="trailing" id="wmp-qR-wue"/>
                                                         <constraint firstAttribute="bottom" secondItem="zGb-jy-izC" secondAttribute="bottom" id="xBx-3u-MnQ"/>
                                                     </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="10"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                            <real key="value" value="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                                            <real key="value" value="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                            <size key="value" width="0.0" height="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                 </view>
                                             </subviews>
                                         </view>
@@ -73,6 +87,17 @@
                                             <constraint firstAttribute="bottom" secondItem="RKa-M5-a6n" secondAttribute="bottom" id="hqP-Ya-LAy"/>
                                             <constraint firstItem="RKa-M5-a6n" firstAttribute="leading" secondItem="9Rm-qR-CpP" secondAttribute="leading" id="sdF-je-1kh"/>
                                         </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                <size key="value" width="0.0" height="3"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
                                             <outlet property="newsImageView" destination="TkN-E4-B7U" id="7Xu-aA-ggi"/>
                                             <outlet property="newsLabel" destination="zGb-jy-izC" id="yEs-gs-M7U"/>
@@ -81,7 +106,7 @@
                                 </cells>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="n8M-Yg-3wO">
-                                <rect key="frame" x="8" y="294.33333333333326" width="359" height="426.66666666666674"/>
+                                <rect key="frame" x="8" y="299.66666666666674" width="359" height="421.33333333333326"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PriceCell" textLabel="6GF-Hy-ffP" detailTextLabel="DsT-rA-BZH" style="IBUITableViewCellStyleValue1" id="ZMp-O4-6gJ">
@@ -111,7 +136,7 @@
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Daftar Harga" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MwH-Il-xkM">
-                                <rect key="frame" x="8" y="262.66666666666669" width="130" height="23.666666666666686"/>
+                                <rect key="frame" x="8" y="268" width="130" height="23.666666666666686"/>
                                 <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="18"/>
                                 <color key="textColor" red="0.82352941180000006" green="0.81176470590000005" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -120,14 +145,14 @@
                         <color key="backgroundColor" red="0.18823529411764706" green="0.54509803921568623" blue="0.44705882352941173" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="znD-GF-Eua" firstAttribute="trailing" secondItem="n8M-Yg-3wO" secondAttribute="trailing" constant="8" id="39b-uE-a5L"/>
-                            <constraint firstItem="2AL-8m-xvy" firstAttribute="top" secondItem="QQ8-pF-oiL" secondAttribute="bottom" constant="8" id="AXm-bU-PZ8"/>
+                            <constraint firstItem="2AL-8m-xvy" firstAttribute="top" secondItem="QQ8-pF-oiL" secondAttribute="bottom" constant="4" id="AXm-bU-PZ8"/>
                             <constraint firstItem="QQ8-pF-oiL" firstAttribute="top" secondItem="znD-GF-Eua" secondAttribute="top" constant="8" id="Dfu-jP-X8J"/>
                             <constraint firstItem="MwH-Il-xkM" firstAttribute="leading" secondItem="znD-GF-Eua" secondAttribute="leading" constant="8" id="V7P-nP-Bb6"/>
                             <constraint firstItem="znD-GF-Eua" firstAttribute="bottom" secondItem="n8M-Yg-3wO" secondAttribute="bottom" constant="8" id="XDe-xv-AeH"/>
                             <constraint firstItem="2AL-8m-xvy" firstAttribute="leading" secondItem="znD-GF-Eua" secondAttribute="leading" id="dso-rA-ftw"/>
                             <constraint firstItem="2AL-8m-xvy" firstAttribute="height" secondItem="znD-GF-Eua" secondAttribute="height" multiplier="0.2" id="lVA-nX-AeQ"/>
                             <constraint firstItem="znD-GF-Eua" firstAttribute="trailing" secondItem="2AL-8m-xvy" secondAttribute="trailing" id="lbk-BJ-I1b"/>
-                            <constraint firstItem="MwH-Il-xkM" firstAttribute="top" secondItem="2AL-8m-xvy" secondAttribute="bottom" constant="8" id="m6y-w6-l27"/>
+                            <constraint firstItem="MwH-Il-xkM" firstAttribute="top" secondItem="2AL-8m-xvy" secondAttribute="bottom" constant="16" id="m6y-w6-l27"/>
                             <constraint firstItem="n8M-Yg-3wO" firstAttribute="leading" secondItem="znD-GF-Eua" secondAttribute="leading" constant="8" id="uUU-vE-I8f"/>
                             <constraint firstItem="n8M-Yg-3wO" firstAttribute="top" secondItem="MwH-Il-xkM" secondAttribute="bottom" constant="8" id="wgg-c1-zxa"/>
                             <constraint firstItem="QQ8-pF-oiL" firstAttribute="leading" secondItem="znD-GF-Eua" secondAttribute="leading" constant="8" id="zPL-Ek-WCF"/>
@@ -138,11 +163,20 @@
                     <connections>
                         <outlet property="newsAndTipsCollectionView" destination="2AL-8m-xvy" id="b67-Z9-mJ2"/>
                         <outlet property="priceTableView" destination="n8M-Yg-3wO" id="ZYT-Bu-slq"/>
+                        <segue destination="z7m-Ur-MSD" kind="show" identifier="ToNews" id="Vil-go-UZy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oGH-2k-x6D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1004" y="135.96059113300493"/>
+        </scene>
+        <!--NewsStoryboard-->
+        <scene sceneID="xX8-RY-5Hm">
+            <objects>
+                <viewControllerPlaceholder storyboardName="NewsStoryboard" id="z7m-Ur-MSD" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FyS-ow-C8D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1581" y="-41"/>
         </scene>
         <!--Home-->
         <scene sceneID="svc-Oi-9nL">
